kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  selector:
    app: django
  ports:
  - port: 8080
    targetPort: 8000
